Try telling ingest that docker exists? and that actually freeing memory is fine